# ktimetracker

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kateconfig  .kde-ci.yml  .krazy  .reviewboardrc  CMakeLists.txt  CONTRIBUTING.md  ChangeLog.md  Mainpage.dox  README  README.md  REUSE.toml  csvexportdialog.cpp  csvexportdialog.h  csvexportdialog.ui  csvexportdialog_base.ui  desktoptracker.cpp  edittaskdialog.cpp  edittaskdialog.ui  focusdetector.cpp  focusdetector.h  focusdetectornotifier.h  historydialog.cpp  historydialog.ui  idletimedetector.cpp  idletimedetector.h  ktimetracker.php  ktimetracker_config_behavior.desktop  ktimetracker_config_display.desktop  ktimetracker_config_storage.desktop  ktimetrackerconfigdialog.cpp  ktimetrackerconfigdialog.h  ktimetrackerpart.cpp  ktimetrackerpart.desktop  ktimetrackerpart.h  ktimetrackerui.rc  ktimetrackerutility.cpp  ktimetrackerutility.h  (+23 more)
icons/: CMakeLists.txt  icons.qrc  sc-actions-subtask-new-ktimetracker.svgz
icons/app/: CMakeLists.txt
icons/breeze-dark/: COPYING-ICONS
ktimetracker/: BUGS  CMakeLists.txt  ChangeLog  DESCRIPTION  Mainpage.dox  Makefile.am  Makefile.in  Messages.sh  README  TODO  adddata.cpp  adddata.h  adddlg.cpp  adddlg.h  cfgbehavior.ui  cfgdisplay.ui  cfgstorage.ui  config-karm.h.cmake  config-ktimetracker.h.cmake  configure.in.in  csvexportdialog.cpp  csvexportdialog.h  csvexportdialog_base.ui  desktoplist.h  desktoptracker.cpp  desktoptracker.h  docking.cpp  docking.h  edithistorydialog.cpp  edithistorydialog.h  edittaskdialog.cpp  edittaskdialog.h  edittaskdialog.ui  focusdetector.cpp  focusdetector.h  focusdetectornotifier.cpp  focusdetectornotifier.h  getactivewindowtitle  historydialog.cpp  historydialog.h  (+80 more)
ktimetracker/doc/: Mainpage.dox  Makefile.am  design  index-1.html  index-2.html  index-3.html  index-4.html  index.html  index.sgml  karm-1.html  karm-2.html  karm-3.html  karm-4.html  karm.html  karm.sgml  scrn.html  updating_parents.html
ktimetracker/kcmconfigs/: CMakeLists.txt  kcmktimetrackerconfig.cpp  kcmktimetrackerconfig.h  ktimetrackerconfig.desktop  ktimetrackerconfigwidget.cpp  ktimetrackerconfigwidget.h
ktimetracker/new/: CMakeLists.txt  index.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ktimetracker/pics/: CMakeLists.txt  Makefile.am  active-icon-1.xpm  active-icon-3.xpm  active-icon-5.xpm  active-icon-7.xpm  empty-watch.xpm  task-complete.xpm  watch-0.xpm  watch-1.xpm  watch-2.xpm  watch-3.xpm  watch-4.xpm  watch-5.xpm  watch-6.xpm  watch-7.xpm
ktimetracker/plasma/: CMakeLists.txt  ktimetrackerapplet.cpp  ktimetrackerapplet.h  ktimetrackerengine.cpp  ktimetrackerengine.h  plasma-engine-ktimetracker.desktop  plasma-timetrackerapplet-default.desktop
ktimetracker/support/: CMakeLists.txt  KArm.kdelnk  Makefile.am  clock.xpm  clockedit.xpm  karm.desktop  ktimetracker.desktop  newtask.dlg
ktimetracker/test/: CMakeLists.txt  Makefile.am  README  __httpd.py  __korg.sh  __lib.sh  __webdav.pl  booktime-baddate.sh  booktime-badduration.sh  booktime-badtime.sh  booktime-baduid.sh  booktime-works.sh  bug94447.sh  delete.sh  example.ics  ktimetrackerbenchmark  ktimetrackerbenchmark.sh  lifetest.php  lockerthread.cpp  lockerthread.h  locking.cpp  refresh_on_change.sh  remote_storage.sh  runalltests  runscripts.cpp  script.cpp  script.h  version.sh  webdav.sh
pics/: CMakeLists.txt  active-icon-0.xpm  active-icon-2.xpm  active-icon-4.xpm  active-icon-6.xpm  clockedit.xpm  pics.qrc  task-incomplete.xpm  watch-0.xpm  watch-2.xpm  watch-3.xpm  watch-6.xpm
pics/icons/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  config-ktimetracker.h.cmake  csvexportdialog.cpp  csvexportdialog.h  csvexportdialog.ui  desktoplist.h  desktoptracker.cpp  desktoptracker.h  edittaskdialog.cpp  edittaskdialog.h  edittaskdialog.ui  focusdetector.cpp  focusdetector.h  historydialog.cpp  historydialog.h  historydialog.ui  idletimedetector.cpp  idletimedetector.h  ktimetracker-version.h.cmake  ktimetracker.desktop  ktimetracker.qrc  ktimetrackerui.rc  ktimetrackerutility.cpp  ktimetrackerutility.h  kttcalendar.cpp  kttcalendar.h  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.ktimetracker.desktop  org.kde.ktimetracker.ktimetracker.xml  plannerparser.cpp  plannerparser.h  preferences.cpp  preferences.h  reportcriteria.h  task.cpp  task.h  taskview.cpp  (+11 more)
src/base/: CMakeLists.txt  desktoplist.h  desktoptracker.cpp  desktoptracker.h  focusdetector.cpp  focusdetector.h  idletimedetector.cpp  ktimetrackerutility.cpp  mainwindow.cpp  mainwindow.h  reportcriteria.h  taskview.cpp  taskview.h  timetrackerstorage.cpp  timetrackerstorage.h  timetrackerwidget.cpp  timetrackerwidget.h  tray.cpp  tray.h  treeviewheadercontextmenu.cpp  treeviewheadercontextmenu.h
src/dialogs/: CMakeLists.txt  csvexportdialog.h  csvexportdialog.ui  edittimedialog.cpp  edittimedialog.h  exportdialog.cpp  exportdialog.h  exportdialog.ui  historydialog.cpp  historydialog.h  historydialog.ui  taskpropertiesdialog.cpp  taskpropertiesdialog.h
src/export/: CMakeLists.txt  csveventlog.cpp  csveventlog.h  csvhistory.cpp  csvhistory.h  csvtotals.cpp  csvtotals.h  dailyreport.cpp  dailyreport.h  export.cpp  export.h  perioddailyreport.cpp  perioddailyreport.h  periodreport.cpp  periodreport.h  totalsastext.cpp  totalsastext.h
src/file/: CMakeLists.txt  filecalendar.cpp  filecalendar.h  icalformatkio.cpp  icalformatkio.h
src/import/: CMakeLists.txt  plannerparser.cpp  plannerparser.h
src/model/: CMakeLists.txt  event.cpp  event.h  eventsmodel.cpp  eventsmodel.h  projectmodel.cpp  projectmodel.h  task.cpp  task.h  tasksmodel.cpp  tasksmodel.h  tasksmodelitem.cpp  tasksmodelitem.h
src/pics/: CMakeLists.txt  pics.qrc
src/qml/: EditTimeDialog.qml
src/settings/: CMakeLists.txt  cfgbehavior.ui  cfgdisplay.ui  cfgstorage.ui  ktimetracker.kcfg  ktimetracker.kcfgc  ktimetrackerconfigdialog.cpp  ktimetrackerconfigdialog.h
src/tests/: CMakeLists.txt  exportcsvtest.cpp  formattimetest.cpp  helpers.cpp  helpers.h  plannerparsertest.cpp  storagetest.cpp  tasktest.cpp
src/widgets/: CMakeLists.txt  searchline.cpp  (+3 more)
(+125 files in other folders)
